// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) change-order (a record) 1`] = `
{
  "lines": 1413,
  "sha256": "ff977259a874d108e6530256d854ddfe10a714a19501a66015b4ad7d253b9cf8",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) change-order (project only) 1`] = `
{
  "lines": 1025,
  "sha256": "b724eb8beae4424142df32c16b64710028cb82269db45571ab56968214ef1811",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (a record) 1`] = `
{
  "lines": 1015,
  "sha256": "0c467bb3840afbf558aefc42d9a5304471e446a04fdf835da7c027cf26098077",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (project only) 1`] = `
{
  "lines": 1025,
  "sha256": "302f915404272d79190e7f17c17f4112084283784fd0f1a681fe9695eb9acbac",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) invoice (the tutorial route, type=progress) 1`] = `
{
  "lines": 1036,
  "sha256": "82d371e31888ce8fe0691034b18b615f1bacc47e81f1cc59a5a8bfb08ed2ec66",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) rfi (a record) 1`] = `
{
  "lines": 863,
  "sha256": "05f7c9ed0b7c2081690314126128ba8452cda0b2ed5fe6e1c00b8df362631e5d",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) rfi (project only: the create form) 1`] = `
{
  "lines": 746,
  "sha256": "e9cc0da263a741b4d5aa6fa275f635c0dd22155c8c9a1396135854a70ec65067",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) submittal (a record) 1`] = `
{
  "lines": 807,
  "sha256": "1e80699a5cac0d22a609845dcdaadca8841e687d295651544865c0ddf9171920",
}
`;

exports[`lane G — the phone is unchanged (golden, 390 × 844 iOS) submittal (project only) 1`] = `
{
  "lines": 726,
  "sha256": "3bdda53592c750274c8b05cdeecd6c55c88330277bc5229c9ef5cee2ed162f33",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (approved credit: the bill bar says why) 1`] = `
{
  "lines": 991,
  "sha256": "faf936e538795dab0c295aae329abe2a56ba70bba115d5af8f633d7c126e5579",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (approved, billable: the bill bar) 1`] = `
{
  "lines": 1003,
  "sha256": "393780b59b3da2ea960c9ca105e775ec2f1177b239d064070f9302c376ecac94",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) change-order (rejected: locked, no bar) 1`] = `
{
  "lines": 997,
  "sha256": "b95a4073e9e5899470476805d674a8740e3d76fa4ec236202ef83cd3aeb759f9",
}
`;

exports[`lane G — the phone is unchanged, bar branches (golden, 390 × 844 iOS) invoice (sent: reminder and pay link) 1`] = `
{
  "lines": 1010,
  "sha256": "3383574e69c6a5cf6966d1efae2d3cc64c648804169d9e86fc7469d4a14d12b0",
}
`;
